--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </div>
     
   <footer>
-    <a id = "portsite" href = "https://chris-hesterman.github.io/Personal-Page/" target = "_blank">Coded by Chris Hesterman 2017</a>
+    <a id = "portsite" href = "https://chris-hesterman.github.io/Personal-Page/" target = "_blank">Chris Hesterman 2017</a>
   </footer>
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
